--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="UTF-8">
-        <meta name="description" content="Real Estate properties investment">
-        <meta name="keyword" content="Real Estate, Investment, Buying, Selling">
-        <meta name="author" content="RealOwn Estate"> 
-        <title>RealOwnOfficial Estate</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Real Estate properties investment">
+    <meta name="keyword" content="Real Estate, Investment, Buying, Selling">
+    <meta name="author" content="RealOwn Estate"> 
+    <title>RealOwnOfficial Estate</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
         <div class="hero">
             <nav id="navbar">
                 <img src="images/Layer 1.png" width="200px" height="40px">  
@@ -115,8 +115,8 @@
                 <h2>Embrace the future of Real</h2>
                 <h2>Estate investments!</h2>
                 <br>
-                <p>Have access to fresh updates about several investment opportunities, our</p>
-                <p>launch and lots more.</p>
+                <p class="gap">Have access to fresh updates about several investment opportunities, our</p>
+                <p class="gap">launch and lots more.</p>
                 <br>
                 <br>
                 <form method="post" action="https://sendfox.com/form/1dy5wj/1x8qgn" class="sendfox-form" id="1x8qgn"
@@ -132,13 +132,13 @@
                 </form>
                 <div class="social-icons">
                     <ul>
-                        <li><a href="Facebook.com/RealOwnOfficial">
+                        <li><a href="https://web.facebook.com/realownofficial/">
                             <img src="images/icons8-facebook.svg" width="25px" height="25px">
                         </a></li>
-                        <li><a href="Instagram.com/RealOwnOfficial">
+                        <li><a href="https://instagram.com/realownofficial/">
                             <img src="images/icons8-instagram.svg" width="25px" height="25px">
                         </a></li>
-                        <li><a href="Twitter.com/RealOwnOfficial">
+                        <li><a href="https://twitter.com/RealOwnOfficial">
                             <img src="images/icons8-twitter.svg" width="25px" height="25px">
                         </a></li>
                         <li><a href="#">
@@ -157,14 +157,14 @@
 
             window.addEventListener('scroll', reveal);
 
-            function reveal(){
+        /*    function reveal(){
                 let pics = document.getElementById("pics");
 
-                for(var i = 0; i < pics.length; i++){
+                for(let i = 0; i < pics.lenght; i++){
 
-                    var windowheight = window.innerHeight;
-                    var revealtop = reveals[i].getBoundingClientReact().top;
-                    var revealpoint = 150;
+                    let windowheight = window.innerHeight;
+                    let revealtop = reveals[i].getBoundingClientReact().top;
+                    let revealpoint = 150;
 
                     if(revealtop < windowheight - revealpoint){
                         reveal[i].classList.add('active');
@@ -173,10 +173,10 @@
                         reveals[i].classList.remove('active');
                     }
                 }
-            }
+            }    */
 
 
-            var navbar = document.getElementById("navbar")
+         /*   var navbar = document.getElementById("navbar")
             var menu = document.getElementById("menu")
 
             window.onscroll = function(){
@@ -186,7 +186,7 @@
                 else{
                     navbar.classList.remove("sticky");
                 }
-            }
+            }            */   
 
         </script>
     </body>
