--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <h1>affordability and profitability</h1>
                 <br><br>
             </div>
-        <div class="hero-btn">
-            <a href="https://sendfox.com/form/1dy5wj/1x8qgn" class="btn">Sign me up</a>
+        <div class="hero-btn" width="300px">
+            <a href="https://sendfox.com/form/1dy5wj/1x8qgn" class="btn">Sign me up!</a>
         </div>
         </div>
 
