--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <img class="coin" src="images/coin.svg">
                 <h3 class="top-off">What If.....</h3>
             <div class="box">
-                <div class="card">
-                    <img src="images/Vector-1.png" width="40px" height="45px">
+                <div data-aos="fade-up" data-aos-duration="3000"  class="card">
+                    <img data-aos="fade-up-right" data-aos-duration="3000" src="images/Vector-1.png" width="40px" height="45px">
                     <div class="pra">
                     <p>Real-estate becomes the new
                         cryptocurrency, a tokenized
@@ -46,8 +46,8 @@
                 </div>
                 </div>
 
-                <div class="card">
-                    <img src="images/Vector-2.png" width="40px" height="45px">
+                <div data-aos="fade-up" data-aos-duration="3000" class="card">
+                    <img data-aos="fade-up-right" data-aos-duration="3000" src="images/Vector-2.png" width="40px" height="45px">
                     <div class="pra">
                     <p>You can point to massive
                         buildings in your community and
@@ -58,8 +58,8 @@
                 </div>
                 </div>
 
-                <div class="card">
-                    <img src="images/Vector.png" width="40px" height="45px">
+                <div data-aos="fade-right" data-aos-duration="3000" class="card">
+                    <img data-aos="fade-up-right" data-aos-duration="3000" src="images/Vector.png" width="40px" height="45px">
                     <div class="pra">
                     <p>You can invest in Real estate
                         without taking weeks to research
